test/fixtures/errors/throw-error-loader.js
module.exports = function(source) {
	throw new Error("this is a thrown error");
};
